test/errors/builtin_types_error/zs/bitfield_invalid_length_type_error.zs
package bitfield_invalid_length_type_error;

struct InvalidLengthTypeBitfield
{
    bool        length;
    bit<length> wrong;
};
